Mon Mar 27 14:16:39 1995  John Gilmore  (gnu at toad.com)

	* macsock.c:  Add Mac socket support file, verbatim from K4 release.

Fri Mar 24 17:58:15 1995  Theodore Y. Ts'o  (tytso@rt-11)

	* locate_kdc.c: Don't include sys/socket.h, netdb.h, netinet/in.h,
		since these files are already included by k5-config.h
	
	* sendto_kdc.c: Don't include sys/socket.h, since it is already
		included by k5-config.h

	* sn2princ.c: Don't include netdb.h, since it is already included
		by k5-config.h

Thu Mar 23 23:11:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* realm_dom.c (krb5_get_realm_domain): Don't indent preprocessor
	        directives.  (Not portable).

	* hst_realm.c (krb5_get_host_realm): Don't indent preprocessor
		directives.  Removed excess close paren introduced by
		Keith.

Wed Mar 22 18:59:47 1995 Keith Vetter (keithv@fusion.com)

        * hst_realm.c, realm_dom.c: windows DLL can't use fscanf so had
           to write a couple of routines to read what we need from the file.

Wed Mar 22 13:30:35 1995 Keith Vetter (keithv@fusion.com)

	* an_to_ln.c, kuserok.c: last two os routines ported to the PC.

Fri Mar 17 19:56:39 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (LDFLAGS):  Eliminate, duplicates config/pre.in.
	* localaddr.c:  Remove socket include files now handled in k5-int.h.

Wed Mar 15 12:19:47 1995 Keith Vetter (keithv@fusion.com)

	* sendto_kdc.c: made to work on the PC.

Tue Mar  7 22:15:00 1995 Keith Vetter <keithv@fusion.com>

	* sendto_kdc.c: stubbed on the PC for now.

Tue Mar  7 19:54:17 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_DEFS, ISODE_INCLUDE.

Tue Mar 7 13:35:21 1995 Keith Vetter (keithv@fusion.com)

	* *.c: ported all the c files except an_to_ln, kuserok, and
          sendto_kdc which have windows stubs.
        * Makefile.in: reflects above changes.

Wed Mar 1 17:30:00 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: made to work on the PC
	* ustime.c: added section for time on the PC